--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -9,6 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="#3F51B5"
+        android:text="@string/hello_blank_fragment"
+        android:textColor="#F81717"
+        android:textSize="40sp" />
 
 </FrameLayout>
